--- a/style.css
+++ b/style.css
@@ -31,3 +31,8 @@ section{
     background-repeat: no-repeat;
 
 }
+.dream_big{
+    background-image:url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
